<resources>
    <string name="app_name">SuperMerkAPP2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="sharedpreferences_filename">login</string>
    <string name="jwt_key">JWT_KEY</string>
    <string name="jwt_id">JWT_ID</string>
    <string name="login">Log In</string>
    <string name="signup">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="credentials">I have read and agree to the terms and conditions</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="title">Title</string>
    <string name="province">Province</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="category">Category</string>
    <string name="size">Size</string>
    <string name="zipcode">Zipcode</string>
    <string name="city">City</string>
    <string name="address">Address</string>
    <string name="change_picture">Change Picture</string>
    <string name="logout">Log Out</string>
    <string name="favourites">Favourites</string>
    <string name="my_posts">My Posts</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rooms">2</string>
    <string name="title_mine">My Posts</string>
    <string name="title_fav">Favs</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="title_activity_product">ProductActivity</string>
    <string name="title_activity_fav">FavActivity</string>
    <string name="title_activity_maps">Map</string>
</resources>
